src/test/deca/context/valid/def_affect/double-def.deca
// Description:
//    Double definition.
//
// Resultats:
//    a et c entiers

{
    int a, c;
}