src/test/deca/context/invalid/autre/point-virgule-absent.deca
// Description:
//    Programme incorrect, point virgule manquant.
//
// Resultats:
//    Ligne 11 : Erreur.
//
// Historique:
//    cree le 01/01/2022

{
    int a
}
